addes background and css styles

--- a/All Project Code & Components/src/views/pages/login.ejs
+++ b/All Project Code & Components/src/views/pages/login.ejs
@@ -3,20 +3,22 @@
     <main>
         <div class="col"><%- include ('../partials/message') %></div>
         <div class="container">
-            <!-- THE REST OF YOUR HTML CODE GOES HERE -->
-            <form action="/login" method="POST" style="display: block; width: 50%; margin: 0 auto; padding-top: 100px;">
-                <h2>
-                    <centre>Login</centre>
-                </h2>
-                <label class="form-label" for="username">Username</label>
-                <input class="form-control" name="username" class="input" type="text" />
-                <label class="form-label" for="password">Password</label>
-                <input class="form-control" name="password" class="input" type="password" />
-                <hr class="solid" style="border-top: 2px solid #bbb;">
-                <label class="control-label" for="button" style="float: left;">Don't have an account? <a
-                        href="/register">Register</a></label>
-                <button id="button" class="btn btn-primary" type="submit" style="float: right;">Login</button>
-            </form>
+            <div class="form-container">
+                <form action="/login" method="POST"
+                    style="display: block;">
+                    <h2 style="text-align: center;">
+                        Login
+                    </h2>
+                    <label class="form-label" for="username">Username</label>
+                    <input class="form-control input" name="username" type="text" />
+                    <label class="form-label" for="password">Password</label>
+                    <input class="form-control input" name="password" type="password" />
+                    <hr class="solid" style="border-top: 2px solid #bbb;">
+                    <label class="control-label" for="button" style="float: left;">Don't have an account? <a
+                            href="/register">Register</a></label>
+                    <button id="button" class="btn btn-primary" type="submit" style="float: right;">Login</button>
+                </form>
+            </div>
         </div>
     </main>
 
