--- a/All Project Code & Components/src/views/pages/register.ejs
+++ b/All Project Code & Components/src/views/pages/register.ejs
@@ -2,9 +2,8 @@
 
   <main>
     <div class="col"><%- include ('../partials/message') %></div>
-    <div class="container">
-      <!-- THE REST OF YOUR HTML CODE GOES HERE -->
-      <form action="/register" method="POST" style="display: block; width: 50%; margin: 0 auto; padding-top: 100px;">
+    <div class="form-container">
+      <form action="/register" method="POST" style="display: block;">
         <h2>
           <centre>Register New Account</centre>
         </h2>
