--- a/All Project Code & Components/src/views/pages/comments.ejs
+++ b/All Project Code & Components/src/views/pages/comments.ejs
@@ -8,7 +8,7 @@
                     <!-- post container -->
                     <div class="col-6">
                         <div class="container"
-                            style="position: relative; max-width: 390px; width: 100%; height: fit-content; padding: 0px; box-shadow: 6px 6px 0px 0px rgba(0, 0, 0); margin-right: 40px;">
+                            style="background-color: whitesmoke; position: relative; max-width: 390px; width: 100%; height: fit-content; padding: 0px; box-shadow: 6px 6px 0px 0px rgba(0, 0, 0); margin-right: 40px;">
                             <div class="col"
                                 style="width: 100%; height: fit-content; border-color: black; border-width: 1px; border-style: solid; padding: 12px;">
                                 <h2 style="padding-bottom: 4px;">
@@ -67,7 +67,7 @@
                     <!-- comment container -->
                     <div class="col-6">
                         <div class="container"
-                            style="max-width: 390px; width: 100%; max-height: 500px; height: fit-content; overflow-y: auto; padding: 0px; box-shadow: 6px 6px 0px 0px rgba(0, 0, 0); box-sizing: border-box; border: 1px solid black; margin-left: 40px;">
+                            style="background-color: whitesmoke; max-width: 390px; width: 100%; max-height: 500px; height: fit-content; overflow-y: auto; padding: 0px; box-shadow: 6px 6px 0px 0px rgba(0, 0, 0); box-sizing: border-box; border: 1px solid black; margin-left: 40px;">
                             <div class="col"
                                 style="width: 100%; padding: 12px; padding-bottom: 16px; padding-right: 16px; box-sizing: border-box;">
                                 <div class="d-flex" style="padding-bottom: 12px;">
@@ -111,8 +111,8 @@
                                                 <% } %>
                             </div>
                         </div>
-                        <div class="container"
-                            style="max-width: 390px; width: 100%; height: fit-content; padding: 0px; margin-top: 24px; box-shadow: 6px 6px 0px 0px rgba(0, 0, 0); margin-left: 40px;">
+                        <div class="form-container"
+                            style="background-color: whitesmoke; max-width: 390px; width: 100%; height: fit-content; padding: 0px; margin-top: 24px; box-shadow: 6px 6px 0px 0px rgba(0, 0, 0); margin-left: 40px;">
                             <div class="col"
                                 style="width: 100%; border-color: black; border-width: 1px; border-style: solid; padding: 12px;">
                                 <form action="" method="post">
