--- a/All Project Code & Components/src/views/pages/create_post.ejs
+++ b/All Project Code & Components/src/views/pages/create_post.ejs
@@ -3,29 +3,27 @@
 
     <main>
       <div class="col"><%- include ('../partials/message') %></div>
-      <div class="container">
-
-
-        <!-- THE REST OF YOUR HTML CODE GOES HERE -->
-        <h2>
-          <center>Create a New Post (all fields are required!)</center>
+      <div class="form-container">
+        <h2 style="text-align: center;">
+          Create a New Post (all fields are required!)
         </h2>
         <form action="/create_post" method="POST"
           style="display: block; width: 50%; margin: 0 auto; padding-top: 10px;">
 
           <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Song</label>
-            <input type="url" class="form-control" id="songUrl" name="songUrl" placeholder="Spotify song url">
+            <label for="songUrl" class="form-label">Song</label>
+            <input type="url" class="form-control" id="songUrl" name="songUrl" placeholder="Spotify song url"
+              style="height: 40px;">
           </div>
 
           <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">description</label>
-            <textarea class="form-control" id="description" name="description" rows="3"
-              placeholder="Description..."></textarea>
+            <label for="description" class="form-label">Description</label>
+            <textarea class="form-control" id="description" name="description" rows="3" placeholder="Description..."
+              style="height: 100px;"></textarea>
           </div>
 
           <div class="col-12">
-            <button class="btn btn-primary" type="submit">Post</button>
+            <button class="btn btn-primary" type="submit" style="float: right;">Post</button>
           </div>
 
         </form>
