adjusted style and size for some pages

--- a/All Project Code & Components/src/views/pages/comments.ejs
+++ b/All Project Code & Components/src/views/pages/comments.ejs
@@ -122,7 +122,7 @@
                                         <textarea name="comment"
                                             oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px'"
                                             style="width: 100%; background: none; border: none; resize: none; overflow: hidden; margin-right: 12px;"
-                                            placeholder="Add a comment..."></textarea>
+                                            placeholder="Add a comment..." autocomplete="off" required></textarea>
 
                                         <script>
                                             // Auto resize textarea on page load
