--- a/All Project Code & Components/src/views/pages/search.ejs
+++ b/All Project Code & Components/src/views/pages/search.ejs
@@ -11,7 +11,7 @@
     <form action="/search" method="POST">
         <div class="form-container">
             <label for="username">Username:</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
+            <input type="text" class="form-control" id="username" name="username" placeholder="Enter username" autocomplete="off">
         </div>
         <button type="submit" class="btn btn-primary" style="float: right; width: 100%;">Search</button>
     </form>
