--- a/All Project Code & Components/src/resources/css/style.css
+++ b/All Project Code & Components/src/resources/css/style.css
@@ -5,6 +5,11 @@
   box-shadow: 6px 6px 0px 0px rgba(0, 0, 0);
 }
 
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
 body {
   font-family: "Open sans", sans-serif !important;
   background-image: url('../img/background.jpg');
@@ -18,13 +23,13 @@ body {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 main {
   position: relative;
   background: transparent;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 100%;
   padding: 20px;
 }
