--- a/All Project Code & Components/src/views/pages/create_post.ejs
+++ b/All Project Code & Components/src/views/pages/create_post.ejs
@@ -5,21 +5,20 @@
       <div class="col"><%- include ('../partials/message') %></div>
       <div class="form-container">
         <h2 style="text-align: center;">
-          Create a New Post (all fields are required!)
+          Create a New Post
         </h2>
-        <form action="/create_post" method="POST"
-          style="display: block; width: 50%; margin: 0 auto; padding-top: 10px;">
+        <form action="/create_post" method="POST" style="display: block; padding-top: 10px; width: auto;" class="col-md-6">
 
           <div class="mb-3">
             <label for="songUrl" class="form-label">Song</label>
             <input type="url" class="form-control" id="songUrl" name="songUrl" placeholder="Spotify song url"
-              style="height: 40px;">
+              style="height: fit-content; width: fill;" autocomplete="off" required>
           </div>
 
           <div class="mb-3">
             <label for="description" class="form-label">Description</label>
             <textarea class="form-control" id="description" name="description" rows="3" placeholder="Description..."
-              style="height: 100px;"></textarea>
+              style="height: fit-content; width: fill;" autocomplete="off" required></textarea>
           </div>
 
           <div class="col-12">
