--- a/All Project Code & Components/src/views/partials/menu.ejs
+++ b/All Project Code & Components/src/views/partials/menu.ejs
@@ -1,5 +1,5 @@
 <header>
-    <nav class="navbar navbar-expand-sm border-bottom">
+    <nav class="navbar navbar-expand-sm" style="border-bottom: 3px solid black !important;">
         <div class="container">
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbar-collapse" aria-controls="navbar" aria-expanded="false"
