--- a/All Project Code & Components/src/resources/css/style.css
+++ b/All Project Code & Components/src/resources/css/style.css
@@ -12,7 +12,7 @@ html {
 
 body {
   font-family: "Open sans", sans-serif !important;
-  background-image: url('../img/background.jpg');
+  background-image: url("../img/background.jpg");
   background-attachment: fixed;
   background-repeat: repeat;
   background-size: cover;
@@ -43,7 +43,7 @@ main {
   margin: 20px auto;
 }
 
-body>div {
+body > div {
   height: 100%;
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
@@ -76,7 +76,6 @@ form {
   max-width: 400px;
   margin: 20px auto;
 }
-
 
 form label {
   display: block;
@@ -114,12 +113,12 @@ form input[type="submit"]:hover {
   margin-top: 5px;
 }
 
-.col>.container>.row>.col-12>.container>.col {
+.col > .container > .row > .col-12 > .container > .col {
   background-color: whitesmoke;
   box-shadow: 6px 6px 0px 0px rgba(0, 0, 0, 0.2);
 }
 
-.col-6>.col {
+.col-6 > .col {
   background-color: whitesmoke;
   box-shadow: 6px 6px 0px 0px rgba(0, 0, 0, 0.2);
 }
@@ -222,6 +221,21 @@ textarea.bio {
   line-height: normal;
 }
 
-.background-color {
-  background-color: #753434;
+.like-button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.like-button i {
+  color: black; /* Default color, change as needed */
+}
+
+.like-button:hover i.bi-heart {
+  color: red; /* Change to your desired hover color */
+}
+
+.like-button:hover i.bi-heart-fill {
+  color: red; /* Filled heart color */
 }
