--- a/All Project Code & Components/src/views/pages/profile.ejs
+++ b/All Project Code & Components/src/views/pages/profile.ejs
@@ -12,7 +12,7 @@
               <% if (ownProfile==true && edit==true) { %>
                 <form action="/profile/edit" method="post" style="max-width: 900px">
                   <% }%>
-                    <div class="col" style="background-color: whitesmoke; border-color: black; border-width: 3px; border-style: solid; padding:
+                    <div class="col" style="background-color: whitesmoke; border-color: black; border-width: 2px; border-style: solid; padding:
                 24px;">
                       <div class="d-flex">
                         <div class="col-6 d-flex align-items-center">
@@ -30,7 +30,7 @@
                                     <%= user.display_name %>
                                   </h1>
                                   <% if (ownProfile==true && edit==false) { %>
-                                    <form action="/profile/edit" method="get">
+                                    <form action="/profile/edit" method="get" style="padding: 0; margin: 0;">
                                       <button
                                         style="background: none; border: none; margin: 0; padding: 0; margin-left: 20px;"
                                         type="submit">
@@ -109,11 +109,11 @@
               <div class="row" style="margin-top: 32px;">
                 <!-- Top Songs -->
                 <div class="col-6 d-flex flex-column align-items-center" style="background-color: transparent;">
-                  <h1 style="background-color: whitesmoke; border-color: black; border-width: 3px; border-style: solid; padding:
+                  <h1 style="background-color: whitesmoke; border-color: black; border-width: 2px; border-style: solid; padding:
                   12px;">
                     Top Songs</h1>
                   <% topTracks.items.forEach(function(song) { %>
-                    <div class="col" style="width: 90%; border-color: black; border-width: 3px; border-style: solid; padding:
+                    <div class="col" style="width: 90%; border-color: black; border-width: 2px; border-style: solid; padding:
                     16px; margin-top: 24px;">
                       <div class="d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center">
@@ -145,11 +145,11 @@
                 </div>
                 <!-- Top Artists -->
                 <div class="col-6 d-flex flex-column align-items-center" style="background-color: transparent;">
-                  <h1 style="background-color: whitesmoke; border-color: black; border-width: 3px; border-style: solid; padding:
+                  <h1 style="background-color: whitesmoke; border-color: black; border-width: 2px; border-style: solid; padding:
                   12px;">
                     Top Artists</h1>
                   <% topArtists.items.forEach(function(artist) { %>
-                    <div class="col" style="width: 90%; border-color: black; border-width: 3px; border-style: solid; padding:
+                    <div class="col" style="width: 90%; border-color: black; border-width: 2px; border-style: solid; padding:
                       16px; margin-top: 24px;">
                       <div class="d-flex align-items-center justify-content-between">
                         <div class="d-flex align-items-center">
